# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: README.md  test_code.yml
gendiff/: __init__.py
gendiff/app_functionality/: __init__.py  formater.py  gendiff_logic.py  parsing_data.py  read_data.py  read_file.py  recursive_parsing.py  view_output.py
gendiff/app_functionality/views/: format_plain.py  formater.py
gendiff/scripts/: gendiff.py
hexlet_python_package/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: json_to_yml.py  rec_to_json.py  result_diff_json.json
