[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vova <vladimir1012kov@gmail.com>"]
packages = [{include = "gendiff"}]
repository = "https://github.com/SouthUral/python-project-lvl2"
classifiers = [
    "Environment :: Console",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
